// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Debería renderizar bien con query string 1`] = `
<div
  className="App"
>
  <Header
    filterValue=""
    filtrarFavoritos={false}
    onFilterChange={[Function]}
    onFilterEnter={[Function]}
    setFiltrarFavoritos={[Function]}
  />
  <Lista
    data={Array []}
    isError={false}
    isLoading={false}
    selectCharacter={[Function]}
    setPersonajeFavorito={[Function]}
  />
  <Modal
    center={true}
    classNames={
      Object {
        "closeButton": Array [
          "modal-custom-button",
        ],
        "modal": Array [
          "modal-custom",
        ],
      }
    }
    onClose={[Function]}
    open={false}
    showCloseIcon={true}
  >
    <ComicsModal
      history={
        Object {
          "location": Object {
            "pathname": "",
            "search": "?character=spider",
          },
        }
      }
      selectedCharacter={Object {}}
      setComicFavorito={[Function]}
    />
  </Modal>
</div>
`;

exports[`App Debería renderizar bien en "debug mode" 1`] = `
<div
  className="App"
>
  <Header
    filterValue=""
    filtrarFavoritos={false}
    onFilterChange={[Function]}
    onFilterEnter={[Function]}
    setFiltrarFavoritos={[Function]}
  />
  <Lista
    data={Array []}
    isError={false}
    isLoading={false}
    selectCharacter={[Function]}
    setPersonajeFavorito={[Function]}
  />
  <Modal
    center={true}
    classNames={
      Object {
        "closeButton": Array [
          "modal-custom-button",
        ],
        "modal": Array [
          "modal-custom",
        ],
      }
    }
    onClose={[Function]}
    open={false}
    showCloseIcon={true}
  >
    <ComicsModal
      history={
        Object {
          "location": Object {
            "pathname": "",
            "search": "",
          },
        }
      }
      selectedCharacter={Object {}}
      setComicFavorito={[Function]}
    />
  </Modal>
</div>
`;
